--- a/templates/prep_next_day.html
+++ b/templates/prep_next_day.html
@@ -857,11 +857,11 @@
       <p style="font-size: 0.85rem; opacity: 0.9;">Manage current schedule or prepare tomorrow's schedule</p>
     </div>
     <div class="header-actions">
-      <a href="{{ url_for('index') }}">Dashboard</a>
-      <a href="{{ url_for('timetable') }}">Timetable</a>
-      <a href="{{ url_for('skill_roster_page') }}">Skill Matrix</a>
-      <a href="{{ url_for('upload_file') }}">Upload</a>
-      <a href="{{ url_for('logout') }}">Logout</a>
+      <a href="{{ url_for('routes.index') }}">Dashboard</a>
+      <a href="{{ url_for('routes.timetable') }}">Timetable</a>
+      <a href="{{ url_for('routes.skill_roster_page') }}">Skill Matrix</a>
+      <a href="{{ url_for('routes.upload_file') }}">Upload</a>
+      <a href="{{ url_for('routes.logout') }}">Logout</a>
     </div>
   </div>
 
